envoy/envoy-iap.yaml
static_resources:
  listeners:
  - name: ingress_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: internal_service
                  timeout: 30s
          http_filters:
          - name: envoy.filters.http.oauth2
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
              token_endpoint:
                cluster: oauth2_cluster
                uri: "https://auth.example.com/oauth2/token"
                timeout: 5s
              authorization_endpoint: "https://auth.example.com/oauth2/authorize"
              credentials:
                client_id: "${OAUTH_CLIENT_ID}"
                token_secret:
                  name: oauth2_client_secret
                  sds_config:
                    path: /etc/envoy/secrets/oauth2_client_secret.yaml
                hmac_secret:
                  name: hmac_secret
                  sds_config:
                    path: /etc/envoy/secrets/hmac_secret.yaml
              redirect_uri: "https://app.example.com/oauth2/callback"
              redirect_path_matcher:
                path:
                  exact: /oauth2/callback
              signout_path:
                path:
                  exact: /oauth2/signout
              forward_bearer_token: true
              auth_scopes:
              - openid
              - profile
              - email
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: internal_service
    connect_timeout: 5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: internal_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: internal-app
                port_value: 8081
  
  - name: oauth2_cluster
    connect_timeout: 5s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: oauth2_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: auth.example.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: auth.example.com
